<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center" />

    <!-- Custom Shape Example -->
    <Button
        android:id="@+id/btn1"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:background="@drawable/custom_button"
        android:text="@string/btn1Txt" />

    <TextView
        android:id="@+id/tvSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogTxt" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDateTxt" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDateTxt" />

    <TextView
        android:id="@+id/tvPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrintTxt" />

    <EditText
        android:id="@+id/etPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etPrintHint"
        android:inputType="text" />

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPrintTxt" />


</LinearLayout>
